# n42_csv

./: .gitignore  README.md  SpectrumChartD3.js  pyproject.toml
data/: Peaks_summed_background.CSV  summed_background.n42
src/scripts/: process_spectrum.py  test.py
src/spectrumlib/: __init__.py  spectrumlib.py
